promo spacing fixes

--- a/css/sections.css
+++ b/css/sections.css
@@ -156,10 +156,9 @@ footer {
 /*----------- Kickstarter Promo --------------*/
 #kickstarter {
 	max-width:960px;
-	margin: 40px auto 0px;
+	margin: 40px auto -30px;
 	font-family: 'GT-Haptik-Light', helvetica, sans-serif;
 	line-height: 1.6em;
-	display: inline-block;
 }
 
 #kickstarter h2 {
